@@ -119,6 +119,7 @@ All functions are idempotent: when run multiple times with the same arguments, y
                             'ConvertTo-SecurityIdentifier',
                             'Convert-XmlFile',
                             'Copy-DscResource',
+                            'Disable-AclInheritance',
                             'Disable-FirewallStatefulFtp',
                             'Disable-IEEnhancedSecurityConfiguration',
                             'Disable-IisSecurityAuthentication',
@@ -211,7 +212,6 @@ All functions are idempotent: when run multiple times with the same arguments, y
                             'New-Junction',
                             'New-RsaKeyPair',
                             'New-TempDirectory',
-                            'Protect-Acl',
                             'Protect-String',
                             'Read-File',
                             'Remove-DotNetAppSetting',
