@@ -25,13 +25,16 @@ function Revoke-Permission
     Carbon_Permission
 
     .LINK
+    Disable-AclInheritance
+
+    .LINK
+    Enable-AclInheritance
+
+    .LINK
     Get-Permission
 
     .LINK
     Grant-Permission
-
-    .LINK
-    Protect-Acl
 
     .LINK
     Test-Permission
