@@ -14,10 +14,7 @@ $parentFSPath = $null
 $childFSPath = $null
 $originalAcl = $null
 
-function Start-TestFixture
-{
-    & (Join-Path -Path $PSScriptRoot -ChildPath '..\Import-CarbonForTest.ps1' -Resolve)
-}
+& (Join-Path -Path $PSScriptRoot -ChildPath '..\Import-CarbonForTest.ps1' -Resolve)
 
 function Start-Test
 {
